--- a/_config.yml
+++ b/_config.yml
@@ -3,22 +3,26 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle: ''
-description: ''
+title: martinb.dev
+subtitle: 'Late night technology and bugs'
+description: 'Exploring technology terribly late at night'
 keywords:
-author: John Doe
+  - technology
+  - programming
+  - coding
+  - cybersecurity
+author: Martin B
 language: en
-timezone: ''
+timezone: 'Europe/London'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: https://martinb.dev
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
-  trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
-  trailing_html: true # Set to false to remove trailing '.html' from permalinks
+  trailing_index: false # Set to false to remove trailing 'index.html' from permalinks
+  trailing_html: false # Set to false to remove trailing '.html' from permalinks
 
 # Directory
 source_dir: source
@@ -97,7 +101,84 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: cactus
+theme_config:
+  colorscheme: dark
+  highlight: atelier-cave-dark
+
+  nav:
+    home: /
+    about: /about/
+    Tags: /tags/
+    Categories: /categories/
+
+  posts_overview:
+    show_all_posts: false
+    post_count: 5
+
+  copyright:
+    start_year: 2022
+    end_year:
+
+  social_links:
+    github: https://github.com/martin-bucinskas
+    twitter: https://twitter.com/happysad_m
+    mail: mailto:martin@martinb.dev
+
+  # Customize the logo (i.e., the cactus) in the header.
+  # Options:
+  #   - enabled: whether to show (true) or hide (false) the logo.
+  #   - width: width of the logo in pixel units
+  #   - height: height of the logo in pixel units
+  #   - url: where the logo can be found
+  #   - gravatar: whether to use your Gravatar as the logo
+  #   - grayout: whether to enable a hover effect on the logo
+#  logo:
+#    enabled: true
+#    width: 50
+#    height: 50
+#    url: /images/logo.png
+#    gravatar: false
+#    grayout: true
+
+  # Customize the favicons.
+  # Cactus supports a limited set of the three most important icons:
+  #   - desktop: The classic favion.ico file.
+  #   - android: A 192x192 PNG file.
+  #   - apple:  A 180x180 PNG file.
+  # These can be generated with http://realfavicongenerator.net/
+  # Options:
+  #   - url: where the icon can be found
+  #   - gravatar: whether to create a favicon from your Gravatar
+#  favicon:
+#    desktop:
+#      url: /images/favicon.ico
+#      gravatar: false
+#    android:
+#      url: /images/favicon-192x192.png
+#      gravatar: false
+#    apple:
+#      url: /images/apple-touch-icon.png
+#      gravatar: false
+
+  # Enable MathJax support for Latex
+#  mathjax:
+#    enabled: false
+
+  # Fill in your Google Analytics tracking ID to enable Google Analytics.
+  google_analytics:
+    enabled: false
+    id: UA-86660611-1
+
+  rss:
+
+  cdn:
+    enable: true
+    jquery: 'https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js'
+    clipboard: 'https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.4.0/clipboard.min.js'
+    font_awesome: 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css'
+    justified_gallery_css: 'https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.8.1/css/justifiedGallery.min.css'
+    justified_gallery_js: 'https://cdnjs.cloudflare.com/ajax/libs/justifiedGallery/3.8.1/js/jquery.justifiedGallery.min.js'
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
