--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "martinb.dev",
+  "version": "0.0.1",
+  "homepage": "https://martinb.dev",
   "private": true,
   "scripts": {
     "build": "hexo generate",
