--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "martinb.dev",
   "version": "0.0.1",
-  "homepage": "https://martin-bucinskas.github.io/martinbdev",
+  "homepage": "https://martinb.dev",
   "private": true,
   "scripts": {
     "build": "hexo generate",
