--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,9 @@ external_link:
 filename_case: 0
 render_drafts: false
 post_asset_folder: true
+marked:
+  prependRoot: true
+  postAsset: true
 relative_link: false
 future: true
 highlight:
@@ -125,41 +128,24 @@ theme_config:
     twitter: https://twitter.com/happysad_m
     mail: mailto:martin@martinb.dev
 
-  # Customize the logo (i.e., the cactus) in the header.
-  # Options:
-  #   - enabled: whether to show (true) or hide (false) the logo.
-  #   - width: width of the logo in pixel units
-  #   - height: height of the logo in pixel units
-  #   - url: where the logo can be found
-  #   - gravatar: whether to use your Gravatar as the logo
-  #   - grayout: whether to enable a hover effect on the logo
-#  logo:
-#    enabled: true
-#    width: 50
-#    height: 50
-#    url: /images/logo.png
-#    gravatar: false
-#    grayout: true
+  logo:
+    enabled: true
+    width: 50
+    height: 50
+    url: /images/logo.png
+    gravatar: false
+    grayout: true
 
-  # Customize the favicons.
-  # Cactus supports a limited set of the three most important icons:
-  #   - desktop: The classic favion.ico file.
-  #   - android: A 192x192 PNG file.
-  #   - apple:  A 180x180 PNG file.
-  # These can be generated with http://realfavicongenerator.net/
-  # Options:
-  #   - url: where the icon can be found
-  #   - gravatar: whether to create a favicon from your Gravatar
-#  favicon:
-#    desktop:
-#      url: /images/favicon.ico
-#      gravatar: false
-#    android:
-#      url: /images/favicon-192x192.png
-#      gravatar: false
-#    apple:
-#      url: /images/apple-touch-icon.png
-#      gravatar: false
+  favicon:
+    desktop:
+      url: /images/favicon.ico
+      gravatar: false
+    android:
+      url: /images/android-chrome-192x192.png
+      gravatar: false
+    apple:
+      url: /images/apple-touch-icon.png
+      gravatar: false
 
   # Enable MathJax support for Latex
 #  mathjax:
