--- a/_config.yml
+++ b/_config.yml
@@ -108,6 +108,8 @@ theme: cactus
 theme_config:
   colorscheme: dark
   highlight: atelier-cave-dark
+  post:
+    show_updated: true
 
   nav:
     home: /
@@ -151,10 +153,10 @@ theme_config:
 #  mathjax:
 #    enabled: false
 
-  # Fill in your Google Analytics tracking ID to enable Google Analytics.
-  google_analytics:
-    enabled: false
-    id: UA-86660611-1
+  umami_analytics:
+    enabled: true
+    id: 09919b07-715a-4f4b-85ba-04da500ec663
+    host: https://martinb.dev
 
   rss:
 
