fixing umami script

--- a/_config.yml
+++ b/_config.yml
@@ -156,8 +156,7 @@ theme_config:
   umami_analytics:
     enabled: true
     id: 09919b07-715a-4f4b-85ba-04da500ec663
-    host: https://martinb.dev
-    script_name: https://analytics.umami.is/script.js
+    host: https://analytics.umami.is/script.js
 
   rss:
 
